After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 629946 - Enumerations have incorrect names of enum values (GEnumValue.value_name)
Enumerations have incorrect names of enum values (GEnumValue.value_name)
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other Linux
: Normal normal
: 0.10.31
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-09-17 18:08 UTC by Sebastian Dröge (slomo)
Modified: 2010-10-08 08:36 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastian Dröge (slomo) 2010-09-17 18:08:42 UTC
+++ This bug was initially created as a clone of Bug #629746 +++

For example:

http://cgit.freedesktop.org/gstreamer/gst-plugins-base/tree/gst-libs/gst/audio/gstbaseaudiosrc.c#n52

http://cgit.freedesktop.org/gstreamer/gst-plugins-base/tree/gst-libs/gst/audio/gstbaseaudiosink.c#n114

The second value in GEnumValue should be a string such as "GST_BASE_AUDIO_SRC_SLAVE_RESAMPLE".

So gobject-introspection .gir files contain incorrect values of c:identifier attributes:

[20:47:37 /usr/share/gir-1.0]$ grep -RnTo --color -E
'c:identifier="[A-Z0-9_][a-z]+.*' *
GstAudio-0.10.gir: 839 :c:identifier="Resampling slaving"
GstAudio-0.10.gir: 843 :c:identifier="Skew slaving"
GstAudio-0.10.gir: 847 :c:identifier="No slaving"
GstAudio-0.10.gir:1006 :c:identifier="Resampling slaving"
GstAudio-0.10.gir:1010 :c:identifier="Re-timestamp"
GstAudio-0.10.gir:1012 :c:identifier="Skew" glib:nick="skew"/>
GstAudio-0.10.gir:1015 :c:identifier="No slaving"
...

There're a lot of enums with same problems in GStreamer and its subprojects (run something like "grep -RnT --color -A 2 GEnumValue *" and check results).
Comment 1 Sebastian Dröge (slomo) 2010-09-17 18:09:54 UTC
This should only be done for library stuff where we actually install the corresponding headers, not for plugins where this is used as some kind of documentation.
Comment 2 Tim-Philipp Müller 2010-10-08 08:36:43 UTC
Fixed for core (I hope I got them all):

 commit c7e3bab65d143dc62f21218917bf447f248a8758
 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
 Date:   Fri Oct 8 00:38:39 2010 +0100

    dataprotocol, lfocontrolsource: fix enum value name in enums that are public API
    
    So run-time bindings can introspect the names correctly (we abuse this
    field as description field only in elements, not for public API
    (where the description belongs into the gtk-doc chunk).
    
    https://bugzilla.gnome.org/show_bug.cgi?id=629946