libs/gst/controller/gstlfocontrolsource.c
@@ -584,15 +584,15 @@ gst_lfo_waveform_get_type (void)
 
   if (gtype == 0) {
     static const GEnumValue values[] = {
-      {GST_LFO_WAVEFORM_SINE, "Sine waveform (default)",
+      {GST_LFO_WAVEFORM_SINE, "GST_LFO_WAVEFORM_SINE",
           "sine"},
-      {GST_LFO_WAVEFORM_SQUARE, "Square waveform",
+      {GST_LFO_WAVEFORM_SQUARE, "GST_LFO_WAVEFORM_SQUARE",
           "square"},
-      {GST_LFO_WAVEFORM_SAW, "Saw waveform",
+      {GST_LFO_WAVEFORM_SAW, "GST_LFO_WAVEFORM_SAW",
           "saw"},
-      {GST_LFO_WAVEFORM_REVERSE_SAW, "Reverse saw waveform",
+      {GST_LFO_WAVEFORM_REVERSE_SAW, "GST_LFO_WAVEFORM_REVERSE_SAW",
           "reverse-saw"},
-      {GST_LFO_WAVEFORM_TRIANGLE, "Triangle waveform",
+      {GST_LFO_WAVEFORM_TRIANGLE, "GST_LFO_WAVEFORM_TRIANGLE",
           "triangle"},
       {0, NULL, NULL}
     };
